_sass/styles.scss
// Import Core Clean Blog SCSS
@import "../assets/vendor/startbootstrap-clean-blog/scss/clean-blog.scss";

body {
  font-size: 17px;
}


@import "jekyll-monokai-syntax.scss";
/*@import "jekyll-atom-one-light-syntax.scss";*/


/**
 * Code formatting from minima
 */
pre,
code {
  font-size: 12px;
  color: #f92672;
  border-radius: 3px;
}

code {
  padding: 1px 5px;
}

pre {
  padding: 8px 12px;
  overflow-x: auto;
  
  > code {
    border: 0;
    padding-right: 0;
    padding-left: 0;
  }
}

.highlight {
  border-radius: 3px;
}

